controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    run: webserver
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: webserver
  name: webserver
spec:
  containers:
  - image: webserver
    name: webserver
    ports:
    - containerPort: 8443
    imagePullPolicy: IfNotPresent
    livenessProbe:
      httpGet:
        port: 8443
        path: /hc
        scheme: HTTPS
    readinessProbe:
      httpGet:
        port: 8443
        path: /hc
        scheme: HTTPS
    securityContext:
      runAsNonRoot: true
      readOnlyRootFilesystem: true
