admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "webserver.default.svc"
webhooks:
- name: "webserver.default.svc"
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: "default"
      name: "webserver"
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFekNDQWZ1Z0F3SUJBZ0lKQU5YMU1WT1FodUJ2TUEwR0NTcUdTSWIzRFFFQkN3VUFNQ0F4SGpBY0JnTlYKQkFNTUZYZGxZbk5sY25abGNpNWtaV1poZFd4MExuTjJZekFlRncweU1UQXhNamt3TnpNek1qRmFGdzAwT0RBMgpNVFl3TnpNek1qRmFNQ0F4SGpBY0JnTlZCQU1NRlhkbFluTmxjblpsY2k1a1pXWmhkV3gwTG5OMll6Q0NBU0l3CkRRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFOc0pwbzEySVBVRUZ0WFBFVURFcXhGZ0VTVW4Kc240OURSQkJhVkZlSTgzLzI0bHpJTUY3MkxGWGEyUU54UEZKcjZ5amxlMEIxaSsxUEgyaUlNMGdwRmZwbklBVgpXY2VrYmU0OTRzY [...]
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 5
